# tree-sitter-fountain

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-Fountain.pc.in  tree-sitter-fountain.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_fountain/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFountain/: Fountain.h  fountain.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: test.fountain
test/corpus/: test-dialogue.txt  test-dialogue.txtt  test-title_creds.txt  test-transition-scene.txt  test.fountain
